# woad

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  make.sh  render.c  woad.c
examples/: CMakeLists.txt  examplebase.h  woad-example-00.c
include/woad/: woad.h
shaders/: CMakeLists.txt  common.glsl  debug-deferred.frag  deferred.frag  frag-common.glsl  gbuffer.frag  gbufferpos.frag  gbuffertan.frag  lights.glsl  material.glsl  pos.vert  regular.vert  shadow-common.glsl  shadow.rchit  shadow.rgen  shadow.rmiss  tangent.vert  vert-common.glsl
shaders/old/: mapless.fragold  regular.fragold  tangent.frag
shaders/spv/: debug-deferred-frag.spv  deferred-frag.spv  gbuffer-frag.spv  gbuffertan-frag.spv  regular-vert.spv  shadow-rchit.spv  shadow-rgen.spv  shadow-rmiss.spv  tangent-vert.spv
source/: CMakeLists.txt  woad.c
src/: CMakeLists.txt  woad.c
